# DockDockGo

./: .gitignore  Cargo.toml  README.md  README.txt  backup_cargo_proxy_http.toml
CA/: ca.crt  ca.key
agent/src/: orchestrator.rs  state.rs
agent/src/llm/: decision.rs  engine.rs  mod.rs
agent/src/scans/: mod.rs  result.rs  scan.rs  types.rs
cache/: v2_library_hello-world_manifests_latest
certs-mitm/: myca.crt  myca.key  myca.srl  registry-1.docker.io.crt  registry-1.docker.io.csr  registry-1.docker.io.key  san.cnf
old-certs/: registry-1.docker.io.crt
src/: backup.rs  backup_proxy_http.rs  backup_proxy_https.rs  backup_proxy_mitm_tls.rs  main.rs  main_backup.rs  script.rs
