[package]
name = "docker-mitm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
anyhow = "1.0"
