[package]
name = "docker-mitm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
anyhow = "1.0"
sha2 = "0.10"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4.3"
rand = "0.9.2"
